# template

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
lib/: CMakeLists.txt
scripts/: build.py
src/: CMakeLists.txt
test/: CMakeLists.txt
